--- a/index.html
+++ b/index.html
@@ -336,27 +336,34 @@
               <p><em>I am Sani Muhammad, a full-stack software engineer based in Kano, Nigeria. I have been working
                   remotely for over 2 years as a freelancer and full-time software engineer.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Kano state, Nigeria</li>
+                <li>(+234) 8035-989737</li>
+                <li>muhammadzenqeeth@gmail.com</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui
-                ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Bachelor of Technology(B.Tech) Pure &amp; Applied Mathematics</h4>
+              <h5>2009 - 2014</h5>
+              <p><em>Federal University of Technology Minna, Niger State, Nigeria</em></p>
+              <p>
+
+                My journey in mathematics has provided me with a unique perspective that I bring to the world of web
+                development. My studies in pure mathematics honed my ability to analyze complex problems, break them
+                down into manageable components, and devise innovative solutions. This analytical thinking has been
+                invaluable in dissecting intricate coding challenges and creating efficient algorithms.
+
+
+              </p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius
-                unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart
-                dila</p>
+              <h4>Fullstack Web Developer Certificate</h4>
+              <h5>2021 - 2023</h5>
+              <p><em>Qwasar Silicon Valley San Francisco, California</em></p>
+              <p>I completed an intensive full-stack certificate program at Qwasar Silicon Valley, where I honed my
+                skills in both front-end and back-end web development. The program covered a wide range of technologies,
+                empowering me to build end-to-end web applications.</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
